Adding unit test cases